top-button-container shadow overflow bug fixed up

--- a/src/index.css
+++ b/src/index.css
@@ -159,6 +159,7 @@ h4 {
   justify-content: space-between;
   align-items: center;
   z-index: 998;
+  overflow: visible;
 }
 
 .icon-button {
